--- a/app/src/main/res/layout/layout_symbol_item.xml
+++ b/app/src/main/res/layout/layout_symbol_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Button xmlns:android="http://schemas.android.com/apk/res/android"
+<Button
+  xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/symbol"
   style="@style/Widget.Material3.Button.TextButton"
