--- a/app/src/main/res/layout/activity_terminal.xml
+++ b/app/src/main/res/layout/activity_terminal.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/root"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<LinearLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/root"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:orientation="vertical">
 
-    <com.itsaky.androidide.ui.virtualkeys.VirtualKeysView
-        android:id="@+id/virtual_key_table"
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:background="@android:color/black"
-        tools:ignore="MissingClass" />
+  <com.itsaky.androidide.ui.virtualkeys.VirtualKeysView
+    android:id="@+id/virtual_key_table"
+    android:layout_width="match_parent"
+    android:layout_height="75dp"
+    android:background="@android:color/black"
+    tools:ignore="MissingClass" />
 
 </LinearLayout>
