--- a/app/src/main/res/layout/fragment_log.xml
+++ b/app/src/main/res/layout/fragment_log.xml
@@ -1,4 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+
+<!--
   ~  This file is part of AndroidIDE.
   ~
   ~  AndroidIDE is free software: you can redistribute it and/or modify
@@ -14,7 +16,9 @@
   ~  You should have received a copy of the GNU General Public License
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
-<com.itsaky.androidide.editor.ui.IDEEditor xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/editor"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+
+<com.itsaky.androidide.editor.ui.IDEEditor
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:id="@+id/editor"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent" />
