--- a/app/src/main/res/layout/layout_editor_file_tree.xml
+++ b/app/src/main/res/layout/layout_editor_file_tree.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:padding="16dp">
@@ -17,4 +18,3 @@
     android:layout_centerInParent="true" />
 
 </RelativeLayout>
-
