--- a/app/src/main/res/layout/layout_optionssheet_item.xml
+++ b/app/src/main/res/layout/layout_optionssheet_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
@@ -34,4 +35,3 @@
     tools:text="New file" />
 
 </RelativeLayout>
-
