--- a/app/src/main/res/layout/layout_progress_sheet.xml
+++ b/app/src/main/res/layout/layout_progress_sheet.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
@@ -48,4 +49,3 @@
     tools:text="@string/please_wait" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
