feat(edge-to-edge): Ground work to support edge-to-edge experiences throughout the IDE

--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -13,7 +13,8 @@
     android:layout_height="wrap_content"
     android:elevation="8dp"
     app:elevation="8dp"
-    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">
+    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior"
+    android:fitsSystemWindows="true">
 
     <com.google.android.material.appbar.MaterialToolbar
       android:id="@+id/toolbar"
