--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
   </com.google.android.material.appbar.AppBarLayout>
 
   <FrameLayout
+    android:id="@+id/fragment_containers_parent"
     android:layout_width="0dp"
     android:layout_height="0dp"
     app:layout_constraintBottom_toBottomOf="parent"
