--- a/app/src/main/res/layout/fragment_template_list.xml
+++ b/app/src/main/res/layout/fragment_template_list.xml
@@ -52,7 +52,7 @@
 
   <com.google.android.material.button.MaterialButton
     android:id="@+id/exit_button"
-    style="@style/Widget.Material3.Button.TextButton"
+    style="@style/Widget.Material3.Button.OutlinedButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="16dp"
