--- a/app/src/main/res/layout/layout_editor_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_editor_bottom_sheet.xml
@@ -99,10 +99,7 @@
     android:layout_height="wrap_content"
     android:layout_above="@id/space_bottom"
     android:layout_alignParentEnd="true"
-    android:layout_marginStart="16dp"
-    android:layout_marginTop="16dp"
-    android:layout_marginEnd="16dp"
-    android:layout_marginBottom="16dp"
+    android:layout_margin="16dp"
     android:src="@drawable/ic_close" />
 
   <com.google.android.material.floatingactionbutton.FloatingActionButton
