--- a/resources/src/main/res/values-night/styles.xml
+++ b/resources/src/main/res/values-night/styles.xml
@@ -1,4 +1,6 @@
-<resources><!--
+<resources xmlns:tools="http://schemas.android.com/tools">
+
+  <!--
   ~  This file is part of AndroidIDE.
   ~
   ~  AndroidIDE is free software: you can redistribute it and/or modify
@@ -48,7 +50,10 @@
   </style>
 
   <style name="Theme.AndroidIDE" parent="Theme.AndroidIDE.Styled">
+    <item name="android:statusBarColor">@android:color/transparent</item>
+    <item name="android:navigationBarColor">@android:color/transparent</item>
     <item name="android:windowLightStatusBar">false</item>
+    <item name="android:windowLightNavigationBar" tools:targetApi="27">false</item>
   </style>
 
   <style name="AppTheme.Splash" parent="Theme.SplashScreen">
@@ -57,4 +62,5 @@
     <item name="windowSplashScreenAnimationDuration">200</item>
     <item name="postSplashScreenTheme">@style/Theme.AndroidIDE</item>
   </style>
+
 </resources>
