--- a/resources/src/main/res/values/styles.xml
+++ b/resources/src/main/res/values/styles.xml
@@ -1,4 +1,6 @@
-<resources><!--
+<?xml version="1.0" encoding="utf-8"?>
+
+<!--
   ~  This file is part of AndroidIDE.
   ~
   ~  AndroidIDE is free software: you can redistribute it and/or modify
@@ -14,6 +16,8 @@
   ~  You should have received a copy of the GNU General Public License
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
+
+<resources xmlns:tools="http://schemas.android.com/tools">
 
   <style name="Theme.AndroidIDE.Material" parent="Theme.Material3.Light.NoActionBar">
     <item name="colorPrimary">@color/light_colorPrimary</item>
@@ -50,6 +54,7 @@
     <item name="colorOnSurfaceVariant">@color/light_colorOnSurfaceVariant</item>
 
     <item name="colorOutline">@color/light_colorOutline</item>
+
   </style>
 
   <style name="Theme.AndroidIDE.Base" parent="Theme.AndroidIDE.Material">
@@ -68,7 +73,17 @@
   </style>
 
   <style name="Theme.AndroidIDE" parent="Theme.AndroidIDE.Styled">
+    <item name="android:statusBarColor">@android:color/transparent</item>
+    <item name="android:navigationBarColor">@android:color/transparent</item>
     <item name="android:windowLightStatusBar">true</item>
+    <item name="android:windowLightNavigationBar" tools:targetApi="27">true</item>
+  </style>
+
+  <style
+    name="TextAppearance.AndroidIDE.TitleLarge.Bold"
+    parent="TextAppearance.Material3.TitleLarge">
+    <item name="android:textStyle">bold</item>
+    <item name="android:textAlignment">center</item>
   </style>
 
   <style name="TextAppearance.AndroidIDE.BodySmall" parent="TextAppearance.Material3.BodySmall">
@@ -137,4 +152,5 @@
     <item name="android:windowIsFloating">false</item>
     <item name="android:windowSoftInputMode">adjustResize</item>
   </style>
+
 </resources>
