--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
@@ -12,7 +13,8 @@
     android:layout_height="wrap_content"
     android:elevation="8dp"
     app:elevation="8dp"
-    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">
+    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior"
+    android:fitsSystemWindows="true">
 
     <com.google.android.material.appbar.MaterialToolbar
       android:id="@+id/toolbar"
@@ -21,11 +23,28 @@
 
   </com.google.android.material.appbar.AppBarLayout>
 
-
-  <FrameLayout
-    android:id="@+id/fragmentContainer"
+  <androidx.core.widget.NestedScrollView
+    android:id="@+id/fragment_container_parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
+    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="vertical">
+
+      <FrameLayout
+        android:id="@+id/fragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+      <com.itsaky.androidide.ui.BottomInsetHeightDistributor
+        android:layout_width="match_parent"
+        android:layout_height="0dp" />
+
+    </LinearLayout>
+
+  </androidx.core.widget.NestedScrollView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
