fix: make empty state view non-clickable and non-focusable (closes #1171)

--- a/app/src/main/res/layout/fragment_empty_state.xml
+++ b/app/src/main/res/layout/fragment_empty_state.xml
@@ -22,6 +22,9 @@
   <com.itsaky.androidide.ui.EmptyView
     android:id="@+id/empty_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent"
+    android:background="?attr/colorSurface"
+    android:clickable="false"
+    android:focusable="false" />
 
 </ViewFlipper>
