--- a/app/src/main/res/layout/fragment_empty_state.xml
+++ b/app/src/main/res/layout/fragment_empty_state.xml
@@ -25,6 +25,10 @@
     android:layout_height="match_parent"
     android:background="?attr/colorSurface"
     android:clickable="false"
-    android:focusable="false" />
+    android:focusable="false"
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp"
+    android:gravity="center"
+    android:layout_gravity="center"/>
 
 </ViewFlipper>
