--- a/app/src/main/res/layout/fragment_empty_state.xml
+++ b/app/src/main/res/layout/fragment_empty_state.xml
@@ -22,13 +22,14 @@
   <com.itsaky.androidide.ui.EmptyView
     android:id="@+id/empty_view"
     android:layout_width="match_parent"
+    android:layout_gravity="center"
     android:layout_height="match_parent"
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp"
     android:background="?attr/colorSurface"
     android:clickable="false"
     android:focusable="false"
-    android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp"
     android:gravity="center"
-    android:layout_gravity="center"/>
+/>
 
 </ViewFlipper>
