feature: implemented project list

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,12 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent" />
 
+    <androidx.fragment.app.FragmentContainerView
+      android:id="@+id/project_list"
+      android:name="com.itsaky.androidide.fragments.ProjectListFragment"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent" />
+
   </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
