fix: merge 'Quick run' and 'Cancel build' action into one
This also adds color to those actions and closes #1264

--- a/app/src/main/res/layout/layout_run_task_dialog.xml
+++ b/app/src/main/res/layout/layout_run_task_dialog.xml
@@ -35,7 +35,7 @@
     android:layout_marginEnd="16dp"
     android:tooltipText="@string/run"
     app:icon="@drawable/ic_run"
-    app:iconTint="@color/green_500" />
+    app:iconTint="?attr/colorSuccess" />
 
   <TextView
     android:layout_width="wrap_content"
