refactor: Set project icon directly in layout XML and add theme-aware tint
This commit refactors the code in the `ProjectListAdapter.kt` file to set the project icon directly in the layout XML resource, improving code efficiency and maintainability. Additionally, we have added theme-aware tint to ensure the icon remains visible regardless of the selected theme (light/dark mode).

Changes made:
- Removed the programmatic loading of the project icon using Glide.
- Updated the layout XML resource associated with `ProjectListAdapter.kt` to include the project icon directly.
- Added `app:tint="?attr/colorOnBackground"` to the project icon to make it theme-aware.

By making these changes, we not only achieve cleaner and more efficient code but also enhance the user experience by ensuring that the icon is always visible, regardless of the selected theme.

--- a/app/src/main/res/layout/layout_project_list_item.xml
+++ b/app/src/main/res/layout/layout_project_list_item.xml
@@ -17,7 +17,6 @@
 
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="90dp"
   android:layout_margin="4dp"
@@ -33,7 +32,9 @@
       android:layout_marginTop="8dp"
       android:layout_marginStart="8dp"
       android:scaleType="centerCrop"
+      android:src="@drawable/ic_file_apk"
       app:layout_constraintBottom_toBottomOf="parent"
+      app:tint="?attr/colorOnBackground"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.0" />
