--- a/editor/src/main/res/layout/layout_code_editor.xml
+++ b/editor/src/main/res/layout/layout_code_editor.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~  This file is part of AndroidIDE.
   ~
   ~  AndroidIDE is free software: you can redistribute it and/or modify
@@ -16,35 +15,31 @@
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical">
 
-  <com.itsaky.androidide.editor.ui.IDEEditor
-    android:id="@+id/editor"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="1.0" />
-
-  <HorizontalScrollView
-    android:id="@+id/diagnostic_text_container"
+  <com.google.android.material.progressindicator.LinearProgressIndicator
+    android:id="@+id/rw_progress"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:fillViewport="true">
+    android:indeterminate="false"
+    android:max="100"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    tools:progress="50" />
 
-    <TextView
-      android:id="@+id/diagnostic_text"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:background="?attr/selectableItemBackground"
-      android:clickable="true"
-      android:ellipsize="end"
-      android:focusable="true"
-      android:padding="8dp"
-      android:singleLine="true"
-      android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />
+  <com.itsaky.androidide.editor.ui.IDEEditor
+    android:id="@+id/editor"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/rw_progress" />
 
-  </HorizontalScrollView>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
